[project]
name = "production-rag"
version = "0.1.0"
description = "This is a production implementation of the RAG model for question answering"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.124.4",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.33.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
dev = "production_rag.main:run_dev"
